--- a/frontend-pwa/package.json
+++ b/frontend-pwa/package.json
@@ -35,5 +35,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"firebase": "^11.8.1"
 	}
 }
