--- a/frontend-pwa/package.json
+++ b/frontend-pwa/package.json
@@ -34,7 +34,8 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vite-plugin-pwa": "^1.0.1"
 	},
 	"dependencies": {
 		"firebase": "^11.8.1"
